--- a/kov-spa/src/app/game/game.component.html
+++ b/kov-spa/src/app/game/game.component.html
@@ -11,9 +11,12 @@
       </div>
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">Message Box</h4>
+          <h4 class="text-white">Admin</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">See all (2 new)</a></li>
+            <li><a href="/admin" class="text-white">Home</a></li>
+            <li><a href="/admin/items" class="text-white">Items</a></li>
+            <li><a href="/admin/jobs" class="text-white">Jobs</a></li>
+            <li><a href="/admin/neutrals" class="text-white">Neutrals</a></li>
           </ul>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
@@ -25,6 +28,7 @@
             <li><a href="/game/market" class="text-white">Market</a></li>
             <li><a href="/game/wilderness" class="text-white">Wilderness</a></li>
             <li><a href="/game/work" class="text-white">Work</a></li>
+            <li><a href="/messages" class="text-white">Messages</a></li>
             <li><a href="/" class="text-white">Logout</a></li>
           </ul>
         </div>
