--- a/kov-spa/src/app/game/inventory/inventory.component.scss
+++ b/kov-spa/src/app/game/inventory/inventory.component.scss
@@ -29,13 +29,8 @@ div.hero-stats {
   }
 }
 
-.paging {
-  li {
-    display: inline-block;
-  }
-}
 
-//Tablet & mobile
+//tablet & mobile
 @media only screen and(max-width: 992px) {
 
   .card.current-item {
