Added client-side forms validation
Edit forms still lack validation

--- a/kov-spa/src/app/admin/items/add/add-item.component.html
+++ b/kov-spa/src/app/admin/items/add/add-item.component.html
@@ -6,17 +6,34 @@
   </div>
 
   <div class="row">
-    <form class="col-sm-4 offset-sm-4 text-center">
+    <form #itemForm="ngForm" (ngSubmit)="onSubmit()" class="col-sm-4 offset-sm-4 text-center">
       <fieldset>
 
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" name="name" id="name">
+          <input type="text" class="form-control" name="name" id="name"
+                 minlength="{{NAME_MIN_LENGTH}}" maxlength="{{NAME_MAX_LENGTH}}"
+                 required #name="ngModel" [(ngModel)]="item.name">
+
+          <div *ngIf="(name.dirty || name.touched) &&
+                (name.invalid || !isNameValid(name.value))"
+               class="error">
+          <span *ngIf="name.hasError('required'); else nameValidation">
+            Item name is required.
+          </span>
+            <ng-template #nameValidation>
+            <span *ngIf="!isNameValid(name.value)">
+              Item name should between<br/> {{NAME_MIN_LENGTH}} and {{NAME_MAX_LENGTH}} symbols long.
+            </span>
+            </ng-template>
+          </div>
+
         </div>
 
         <div class="form-group">
           <label for="type">Type</label>
-          <select class="form-control" name="type" id="type">
+          <select class="form-control" name="type" id="type"
+                  #type="ngModel" [(ngModel)]="item.type">
             <option>Weapon</option>
             <option>Shield</option>
             <option>Armour</option>
@@ -25,21 +42,62 @@
 
         <div class="form-group">
           <label for="bonus">Bonus points</label>
-          <input class="form-control" id="bonus" type="number" name="bonus"/>
+          <input class="form-control" id="bonus" type="number" name="bonus"
+                 step="1" min="{{BONUS_MIN}}" max="{{BONUS_MAX}}"
+                 required #bonus="ngModel" [(ngModel)]="item.bonus">
+
+          <div *ngIf="(bonus.dirty || bonus.touched) &&
+             (!isBonusValid(bonus.value) || bonus.invalid)"
+               class="error">
+          <span *ngIf="bonus.hasError('required'); else bonusValidation">
+            Bonus is required.
+          </span>
+            <ng-template #bonusValidation>
+            <span *ngIf="!isBonusValid(bonus.value)">
+              Bonus should be between<br/> {{BONUS_MIN}} and {{BONUS_MAX}}.
+            </span>
+            </ng-template>
+          </div>
+
+        </div>
+
+        <div class="form-group">
+          <label for="price">Price</label>
+          <input class="form-control" id="price" type="number" name="price"
+                 step=1 min="{{PRICE_MIN}}" max="{{PRICE_MAX}}" required #price="ngModel" [(ngModel)]="item.price">
+
+          <div *ngIf="(price.dirty || price.touched) &&
+             (!isPriceValid(price.value) || price.invalid)"
+               class="error">
+          <span *ngIf="price.hasError('required'); else priceValidation">
+            Price is required.
+          </span>
+            <ng-template #priceValidation>
+            <span *ngIf="!isPriceValid(price.value)">
+              Price should be a positive integer.
+            </span>
+            </ng-template>
+          </div>
+
         </div>
 
         <div class="form-group mb-5">
           <label for="image">Image</label>
-          <input type="file" name="image" class="form-control-file" id="image">
+          <input type="file" name="image" class="form-control-file" id="image"
+                 #image (change)=processImage($event)>
           <small id="fileHelp" class="form-text text-muted">Allowed formats: PNG, JPG, JPEG
           </small>
+
+          <div *ngIf="imageInvalid" class="error">Image is invalid.</div>
+
         </div>
 
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button type="submit" [disabled]="!itemForm.valid || !isNameValid(name.value) ||
+                !isPriceValid(price.value) || !isBonusValid(bonus.value) || item.image==undefined"
+                class="btn btn-primary">Add
+        </button>
       </fieldset>
     </form>
   </div>
 
-
 </div>
-
