--- a/kov-spa/src/app/index/login/login.component.html
+++ b/kov-spa/src/app/index/login/login.component.html
@@ -13,17 +13,39 @@
 
 <div class="card custom-card text-white mb-3">
   <div class="card-body text-center">
-    <form action="">
+    <form #loginForm="ngForm" (ngSubmit)="onSubmit()" action="">
       <div class="form-group">
         <label for="email">E-Mail:</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="E-Mail">
+        <input type="email" name="email" class="form-control" id="email" [email]="true"
+               required #email="ngModel" [(ngModel)]="user.email">
+
+        <div *ngIf="email.invalid && (email.dirty || email.touched)"
+             class="error">
+
+          <span *ngIf="email.hasError('required'); else emailValidation">
+            E-Mail is required.
+          </span>
+          <ng-template #emailValidation>
+            <span *ngIf="email.hasError('email')">
+              E-Mail is invalid.
+            </span>
+          </ng-template>
+
+        </div>
+
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
-        <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+        <input type="password" name="password" class="form-control" id="password"
+              required #password="ngModel" [(ngModel)]="user.password">
+
+        <div *ngIf="password.invalid && (password.dirty || password.touched)"
+             class="error">
+          <span>Password is required.</span>
+        </div>
       </div>
 
-      <button type="submit" class="btn btn-secondary mt-5">Login</button>
+      <button [disabled]="!loginForm.valid" type="submit" class="btn btn-secondary mt-5">Login</button>
     </form>
   </div>
 
