--- a/kov-spa/src/app/index/register/register.component.html
+++ b/kov-spa/src/app/index/register/register.component.html
@@ -13,27 +13,81 @@
 
 <div class="card custom-card text-white mb-3">
   <div class="card-body text-center">
-    <form action="">
+    <form #registerForm="ngForm" (ngSubmit)="onSubmit()" action="/">
       <div class="form-group">
         <label for="email">E-Mail:</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="E-Mail">
-        <div class="error">This field is required</div>
-      </div>
-      <div class="form-group">
-        <label for="heroName">Hero Name:</label>
-        <input type="text" name="heroName" class="form-control" id="heroName" placeholder="Hero Name">
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" name="password" class="form-control" id="password" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <label for="passwordConfirm">Confirm Password:</label>
-        <input type="password" name="confirmPassword" class="form-control" id="passwordConfirm"
-               placeholder="Confirm Password">
+        <input type="email" name="email" class="form-control" id="email" [email]="true"
+               required #email="ngModel" [(ngModel)]="account.email">
+
+        <div *ngIf="email.invalid && (email.dirty || email.touched)"
+             class="error">
+          <span *ngIf="email.hasError('required'); else emailValidation">
+            E-Mail is required.
+          </span>
+          <ng-template #emailValidation>
+            <span *ngIf="email.hasError('email')">
+              E-Mail is invalid.
+            </span>
+          </ng-template>
+        </div>
+
       </div>
 
-      <button type="submit" class="btn btn-secondary mt-5">Login</button>
+      <div class="form-group">
+        <label for="heroName">Hero Name:</label>
+        <input type="text" name="heroName" class="form-control" id="heroName"
+               minlength="3" maxlength="25" required #heroName="ngModel" [(ngModel)]="account.heroName">
+
+        <div *ngIf="(heroName.dirty || heroName.touched) &&
+          (heroName.invalid || !isNameValid(heroName.value))"
+             class="error">
+          <span *ngIf="heroName.hasError('required'); else heroNameValidation">
+            Hero name is required.
+          </span>
+          <ng-template #heroNameValidation>
+            <span *ngIf="!isNameValid(heroName.value)">
+              Hero name should between<br/> {{NAME_MIN_LENGTH}} and {{NAME_MAX_LENGTH}} symbols long.
+            </span>
+          </ng-template>
+        </div>
+
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" name="password" class="form-control" id="password"
+               required minlength="{{PASSWORD_MIN_LENGTH}}" #password="ngModel" [(ngModel)]="account.password">
+
+        <div *ngIf="password.invalid && (password.dirty || password.touched)"
+             class="error">
+          <span *ngIf="password.hasError('required'); else passValidation">
+           Password is required.
+          </span>
+          <ng-template #passValidation>
+            <span *ngIf="password.errors.minlength">
+              Password should contain <br/> at least {{PASSWORD_MIN_LENGTH}} symbols.
+            </span>
+          </ng-template>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" name="confirmPassword" class="form-control" id="confirmPassword"
+               required #confirmPassword="ngModel" [(ngModel)]="account.confirmPassword">
+
+        <div *ngIf="password.value!==confirmPassword.value && !confirmPassword.pristine"
+             class="error">
+          <span>
+           Passwords do not match.
+          </span>
+        </div>
+
+      </div>
+
+      <button [disabled]="!registerForm.valid || password.value!==confirmPassword.value" type="submit"
+              class="btn btn-secondary mt-5">Register
+      </button>
     </form>
   </div>
 
