Implemented client-side authentication

--- a/kov-spa/src/app/index/register/register.component.html
+++ b/kov-spa/src/app/index/register/register.component.html
@@ -16,16 +16,16 @@
     <form #registerForm="ngForm" (ngSubmit)="onSubmit()" action="/">
       <div class="form-group">
         <label for="email">E-Mail:</label>
-        <input type="email" name="email" class="form-control" id="email" [email]="true"
-               required #email="ngModel" [(ngModel)]="account.email">
+        <input type="email" name="username" class="form-control" id="email" [email]="true"
+               required #username="ngModel" [(ngModel)]="account.username">
 
-        <div *ngIf="email.invalid && (email.dirty || email.touched)"
+        <div *ngIf="username.invalid && (username.dirty || username.touched)"
              class="error">
-          <span *ngIf="email.hasError('required'); else emailValidation">
+          <span *ngIf="username.hasError('required'); else emailValidation">
             E-Mail is required.
           </span>
           <ng-template #emailValidation>
-            <span *ngIf="email.hasError('email')">
+            <span *ngIf="username.hasError('email')">
               E-Mail is invalid.
             </span>
           </ng-template>
