--- a/kov-spa/src/app/game/game.component.html
+++ b/kov-spa/src/app/game/game.component.html
@@ -29,7 +29,7 @@
             <li><a href="/game/wilderness" class="text-white">Wilderness</a></li>
             <li><a href="/game/work" class="text-white">Work</a></li>
             <li><a href="/messages" class="text-white">Messages</a></li>
-            <li><a href="/" class="text-white">Logout</a></li>
+            <li><a href="/" (click)="logout()" class="text-white">Logout</a></li>
           </ul>
         </div>
       </div>
@@ -53,9 +53,7 @@
 </header>
 
 <main role="main">
-  <notification></notification>
   <router-outlet></router-outlet>
-
 </main>
 
 <footer class="container mt-5">
