--- a/kov-spa/src/app/admin/items/index/items.component.html
+++ b/kov-spa/src/app/admin/items/index/items.component.html
@@ -16,29 +16,13 @@
         <th scope="col">Actions</th>
       </tr>
       </thead>
-      <tbody>
-      <tr>
-        <td>Small Dagger</td>
-        <td>Weapon</td>
+      <tbody *ngIf="items.length>0">
+      <tr *ngFor="let item of items">
+        <td>{{item.name}}</td>
+        <td>{{item.type}}</td>
         <td>
-          <button class="btn btn-outline-info">Edit</button>
-          <button class="btn btn-outline-danger">Delete</button>
-        </td>
-      </tr>
-      <tr>
-        <td>Small Shield</td>
-        <td>Shield</td>
-        <td>
-          <button class="btn btn-outline-info">Edit</button>
-          <button class="btn btn-outline-danger">Delete</button>
-        </td>
-      </tr>
-      <tr>
-        <td>Golden Shield</td>
-        <td>Shield</td>
-        <td>
-          <button class="btn btn-outline-info">Edit</button>
-          <button class="btn btn-outline-danger">Delete</button>
+          <a routerLink="/admin/items/edit/{{item.id}}" class="btn btn-outline-info">Edit</a>
+          <a class="btn btn-outline-danger">Delete</a>
         </td>
       </tr>
       </tbody>
