--- a/kov-spa/src/app/core/notifications/notification.component.scss
+++ b/kov-spa/src/app/core/notifications/notification.component.scss
@@ -2,7 +2,7 @@
   text-align: center;
 
   div.alert {
-    position: absolute;
+    position: fixed;
     top:0px;
     left: 50%;
     -webkit-transform: translateX(-50%);
