Updates on cloud service & notifications
Loader-notifications are now available.

--- a/kov-spa/src/app/core/notifications/notification.component.html
+++ b/kov-spa/src/app/core/notifications/notification.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="showNotification" [ngClass]="notificationTypeClass" class="alert alert-dismissible">
     <button (click)="closeNotification()" type="button" class="close" data-dismiss="alert">&times;</button>
     <strong>{{message}}</strong>
-
+    <img src="./assets/img/loading.gif" alt="">
   </div>
 </div>
 
