--- a/kov-spa/src/app/core/notifications/notification.component.scss
+++ b/kov-spa/src/app/core/notifications/notification.component.scss
@@ -24,5 +24,17 @@
       top:20px;
       opacity: 1;
     }
+
+    &.alert-light{
+      padding-right: 20px;
+      img{
+        display: inline-block;
+      }
+    }
+
+    img{
+      display: none;
+      width: 30px;
+    }
   }
 }
