--- a/kov-spa/src/app/admin/items/edit/edit-item.component.html
+++ b/kov-spa/src/app/admin/items/edit/edit-item.component.html
@@ -102,7 +102,7 @@
 
         <button type="submit" [disabled]="!itemForm.valid || !isNameValid(name.value) ||
                 !isPriceValid(price.value) || !isBonusValid(bonus.value) || imageInvalid"
-                class="btn btn-primary">Add
+                class="btn btn-primary">Edit
         </button>
       </fieldset>
     </form>
