Implemented full neutral unit admin functionality
Plus multiple fixes on both project sides

--- a/kov-spa/src/app/admin/items/edit/edit-item.component.html
+++ b/kov-spa/src/app/admin/items/edit/edit-item.component.html
@@ -87,7 +87,7 @@
           <label>Current image</label>
 
           <div class="old-img mb-5">
-            <img src="{{item.oldImage}}" alt="Previous image">
+            <img src="{{item.oldImage}}" alt="Current image">
           </div>
 
           <label for="image">Image</label>
