--- a/kov-spa/src/app/admin/neutrals/add/add-neutral.component.html
+++ b/kov-spa/src/app/admin/neutrals/add/add-neutral.component.html
@@ -158,6 +158,15 @@
 
         </div>
 
+        <div class="form-group">
+          <label for="type">Type</label>
+          <select class="form-control" name="type" id="type"
+                  #type="ngModel" [(ngModel)]="neutral.type">
+            <option value="Regular">Regular</option>
+            <option value="Special">Special</option>
+          </select>
+        </div>
+
         <div class="form-group mb-5">
           <label for="image">Image</label>
           <input type="file" name="image" class="form-control-file" id="image"
@@ -172,9 +181,9 @@
         <button type="submit" [disabled]="!neutralForm.valid || !isNameValid(name.value) ||
                 !isLevelValid(level.value) || !isHealthValid(health.value) ||
                 !isStatValid(strength.value) || !isStatValid(stamina.value) ||
-                !isStatValid(defense.value) || !isLootValid(loot.value) ||
-                 neutral.image==undefined"
-                class="btn btn-primary">Add</button>
+                !isStatValid(defense.value) || !isLootValid(loot.value) || neutral.image==undefined"
+                class="btn btn-primary">Add
+        </button>
       </fieldset>
     </form>
   </div>
