--- a/kov-spa/src/app/index/register/register.component.html
+++ b/kov-spa/src/app/index/register/register.component.html
@@ -36,7 +36,7 @@
       <div class="form-group">
         <label for="heroName">Hero Name:</label>
         <input type="text" name="heroName" class="form-control" id="heroName"
-               minlength="3" maxlength="25" required #heroName="ngModel" [(ngModel)]="account.heroName">
+               minlength="{{NAME_MIN_LENGTH}}" maxlength="{{NAME_MAX_LENGTH}}" required #heroName="ngModel" [(ngModel)]="account.heroName">
 
         <div *ngIf="(heroName.dirty || heroName.touched) &&
           (heroName.invalid || !isNameValid(heroName.value))"
